--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -1,74 +1,86 @@
-extends ../../layout
+extends ../../_layout
 
-block docVars
-  - var variations = false
+block variables
+  - var showFooter = false
+  - var title = "Tabs"
 
 block hero-title
   h1 Tabs
 
-block basic
-  :markdown
-    Creating a tab is the same as creating a basic HTML document
-    where anchor links navigate to defined sections of the page.
+block ui-stylesheet
+  link(rel="stylesheet" href="/css/pages/docs/ui/tabs.css")
 
-    With the styling and JavaScript in place, these links and document
-    sections will automatically show and hide as you would expect from
-    a tabbed content area.
+block documents
+  .document
+    article.article
+      :markdown
+        Creating a tab is the same as creating a basic HTML document
+        where anchor links navigate to defined sections of the page.
 
-  ul.tabs#tab-example2
-    li.open: a(href="#modern") Modern
-    li: a(href="#old") Old
-    li: a(href="#ancient") Ancient
+        With the styling and JavaScript in place, these links and document
+        sections will automatically show and hide as you would expect from
+        a tabbed content area.
 
-  .tab_pane_container
-    article#modern Internet
-    article#old Encyclopedia
-    article#ancient Papyrus
+      ul.tabs#tab-example2
+        li.open: a(href="#modern") Modern
+        li: a(href="#old") Old
+        li: a(href="#ancient") Ancient
 
-  :markdown
-    <span>
+      .tab_pane_container
+        article#modern Internet
+        article#old Encyclopedia
+        article#ancient Papyrus
 
-        <ul class="tabs" id="ages">
-          <li class="open">
-            <a href="#modern">Modern</a>
-          </li>
-          <li>
-            <a href="#old">Old</a>
-          </li>
-          <li>
-            <a href="#ancient">Ancient</a>
-          </li>
-        </ul>
+    article.code
+      :markdown
+        <span>
 
-        <div class="tab_pane_container">
-          <article id="modern">
-            Internet
-          </article>
-          <article id="old">
-            Encyclopedia
-          </article>
-          <article id="ancient">
-            Papyrus
-          </article>
-        </div>
+            <ul class="tabs" id="ages">
+              <li class="open">
+                <a href="#modern">Modern</a>
+              </li>
+              <li>
+                <a href="#old">Old</a>
+              </li>
+              <li>
+                <a href="#ancient">Ancient</a>
+              </li>
+            </ul>
 
-  .if-semantic
-    :markdown
-      <span>
+            <div class="tab_pane_container">
+              <article id="modern">
+                Internet
+              </article>
+              <article id="old">
+                Encyclopedia
+              </article>
+              <article id="ancient">
+                Papyrus
+              </article>
+            </div>
 
-          .tabs {
-            @include tabs();
-          }
-          .tab_pane_container {
-            @include tab_pane_container();
-          }
+      .if-semantic
+        :markdown
+          <span>
 
-  :markdown
-    You'll also need to tell `k$.tabs()` the selector of the ul that will become the tab bar.
+              .tabs {
+                @include tabs();
+              }
+              .tab_pane_container {
+                @include tab_pane_container();
+              }
 
-        k$.tabs('ages');
+  .document
+    article.article
+      :markdown
+        You'll also need to tell `k$.tabs()` the selector of the ul that will become the tab bar.
 
-block postJS
+    article.code
+      :markdown
+        <span>
+
+            k$.tabs('#ages');
+
+block postDocsJS
   script.
-    k$.nav('.docs-nav')
     k$.tabs('#tab-example2')
