--- a/rails/app/assets/stylesheets/kickstart_rails/core/_dependent_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_dependent_components.sass
@@ -3,10 +3,10 @@
 // These components extend the core and base components.
 
 // Components
-@import ../components/_growls
-@import ../components/_modals
-@import ../components/_notifications
-@import ../components/_tabs
-@import ../components/_tooltips
-@import ../components/_forms
-@import ../components/_pagination
+@import components/_growls
+@import components/_modals
+@import components/_notifications
+@import components/_tabs
+@import components/_tooltips
+@import components/_forms
+@import components/_pagination
